fix spacing

--- a/src/assets/scss/mediaqueries/_main.scss
+++ b/src/assets/scss/mediaqueries/_main.scss
@@ -266,6 +266,14 @@
   .navbar.navbar-custom .navbar-nav .dropdown-menu .nav-dropdown-items .nav-dropdown-item .inner-items .links a{
     margin: 0px;
   }
+  .ecosystem-faq-section {
+    .info{
+      padding: 16px 10px;
+    }
+  }
+    .accordion .card .card-header {
+      padding: 10px;
+  }
 }
 @media (min-width: 768px) and (max-width: 991.8px) {
 .footer .contact-us{
