--- a/src/assets/scss/views/_faq.scss
+++ b/src/assets/scss/views/_faq.scss
@@ -37,9 +37,9 @@
       color: #FFFFFF;
       display: flex;
       width: 100%;
-      color: #FFFFFF;
       align-items: center;
       justify-content: space-between;
+      text-align: left;
     }
 
     .card {
